lang.java.statics.test/tests/positive/classes/methods/superfieldaccess.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public A f;
}

[B]
public class B extends A {
    public A m() {
        return super.f;
    }
}

