lang.java.statics.test/tests/negative/classes/fields/unbound.no.javtest
STATIX fail java.names.lexical-type-name.*Id\(\"B\"\)
JAVAC  fail cannot find symbol

[A]
public class A {
    public B f;
}

